changes in cards no borders fixed after navbar card and heading alignment

--- a/Dribbble_assessment/main.css
+++ b/Dribbble_assessment/main.css
@@ -132,8 +132,10 @@
   background-color: #f8f8fc;
   width: 90%;
   margin-left: 40px;
-  padding: 5px;
+  padding: 15px;
   font-size: 15px;
+  margin-top: 30px;
+  
   
 }
 .lines{
